--- a/style.css
+++ b/style.css
@@ -4,24 +4,63 @@
     margin: 0;
 }
 
+html{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 a{
     text-decoration: none;
 }
 
 .avatar{
-    background-image: ;
+    background-image: url(reindeer.png);
+    background-repeat: no-repeat;
+    background-size : 80px;
+    background-position: center center;
 }
 
 #container{
     display: flex;
-    flex-direction: row;
+    height: 100%;
     padding : 5px;
+    flex-wrap: wrap;
 }
 
 .box{
-    width : 70px;
-    height : 70px;
-    padding : 10px;
+    width : 100px;
+    height : 85px;
+    padding : 0px;
     margin-left: 1px;
+    margin-bottom: 1px;
     border: 2px black solid;
+}
+
+.buttons{
+    display: flex;
+    padding : 20px;
+}
+
+.btn{
+    border: 1px solid black;
+    height: 50px;
+    width: 130px;
+    text-align: center;
+    padding: 10px;
+
+    color: white;
+    background-color: rgb(56, 58, 56);
+}
+.btn:hover{
+    cursor: pointer;
+    background-color: rgb(105, 109, 105);
+}
+
+.message_body{
+    width: 100%;
+    margin-top: 50px;
+}
+.message{
+    margin: auto;
+    width: 50%;
+    font-weight: 900;
 }
