--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Ерөнхий классууд */
+
 *{
     box-sizing: border-box;
     padding: 0;
@@ -10,34 +12,6 @@ html{
 
 a{
     text-decoration: none;
-}
-
-.avatar{
-    background-image: url(reindeer.png);
-    background-repeat: no-repeat;
-    background-size : 80px;
-    background-position: center center;
-}
-
-#container{
-    display: flex;
-    height: 100%;
-    padding : 5px;
-    flex-wrap: wrap;
-}
-
-.box{
-    width : 100px;
-    height : 85px;
-    padding : 0px;
-    margin-left: 1px;
-    margin-bottom: 1px;
-    border: 2px black solid;
-}
-
-.buttons{
-    display: flex;
-    padding : 20px;
 }
 
 .btn{
@@ -55,12 +29,53 @@ a{
     background-color: rgb(105, 109, 105);
 }
 
-.message_body{
-    width: 100%;
-    margin-top: 50px;
+.avatar{
+    background-image: url(reindeer.png);
+    background-repeat: no-repeat;
+    background-size : 80px;
+    background-position: center center;
 }
+
+.box{
+    width : 100px;
+    height : 85px;
+    padding : 5px;
+    margin-left: 1px;
+    margin-bottom: 1px;
+    border: 2px black solid;
+}
+
+/* Үндсэн стайл */
+
+#box_container{
+    display: flex;
+    height: 100%;
+    padding : 5px;
+    flex-wrap: wrap;
+}
+
+.user_input{
+    width: 100%;
+    margin-top: 40px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.btn_container{
+    display: flex;
+}
+
+.buttons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding : 20px;
+    justify-content: space-between;
+}
+
 .message{
-    margin: auto;
-    width: 50%;
+    margin-top: 40px;
     font-weight: 900;
 }
